--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header-right">
           <a href="#tentang">Tentang Kami</a>
           <a href="#lukisan">Lukisan</a>
-          <a href="#kontak" class="login">Kontak</a>
+          <a href="#kontak" >Kontak</a>
         </div>
       </div>
     </header>
