--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suhendra Art Gallery</title>
+    <title>Hendra Gallery</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -12,14 +12,15 @@
     <header >
       <div class="container" >
         <div class="header-left" >
-          <img class="logo" src="logo hendra gallery.png">
+          <img class="logo" src="logo hendra gallery.png" >
         </div>
         <!-- Tambahkan ikon menu disini -->
          <ul class="topnav">
            <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">☰</a></li>
-           <li class="icon2"><a href="#tentang" >Tentang kami</a></li>
-           <li class="icon2"><a href="#lukisan" >Lukisan</a></li>
-           <li class="icon2"><a href="#kontak" >Kontak</a></li>
+           <li class="icon2"><a href="#home">Home</a></li>
+           <li class="icon2"><a href="#profile" >Profile</a></li>
+           <li class="icon2"><a href="#gallery" >Gallery</a></li>
+           <li class="icon2"><a href="#contact" >Contact</a></li>
          </ul>
 
          <script>
@@ -40,61 +41,64 @@
       </div>
     </header>
 
-     <div class="top-wrapper" id="tentang">
+
+
+     <div class="slide-wrapper" id="home">
       <div class="container">
-        <h1>Hendra Gallery</h1>
-        <h1>Art of Painting</h1>
-        <p>Hendra Gallery adalah sebuah website pribadi yang menampilkan lukisan-lukisan hasil karya sendiri yang juga bertujuan untuk dijual.</p>
-        <p>Pelukis bernama bapak Hendra.</p>
         
       </div>
     </div>
+
+    <div class="profile-wrapper" id="profile">
+      <div class="container">
+        <h1>Suhendra Art Gallery</h1>
+        <h1>Art of Painting</h1>
+        <p>Suhendra Art Gallery adalah sebuah website pribadi yang menampilkan lukisan-lukisan hasil karya sendiri yang juga bertujuan untuk dijual.</p>
+        <p>Pelukis bernama bapak Suhendra.</p>
+      </div>
+    </div>
     
-    <div class="lesson-wrapper" id="lukisan">
+    <div class="gallery-wrapper" id="gallery">
       <div class="container">
         <div class="heading" >
-          <h1>Lukisan</h1>
+          <h1>Gallery</h1>
         </div>
-        <div class="lessons">
 
-          <div class="lesson">
-            <div class="lesson-icon">
+        <div class="gallerys">
+          <div class="gallery">
+            <div class="gallery-icon">
               <a href="">
-                <img src="lukisan1.jpg" alt="lukisan 1">
-                <p>Lukisan Tebing Pantai</p>
+                <img src="image/thumbnail/Bukit gundaling.jpg" alt="Bukit Gundaling">
+                <span>Bukit Gundaling</span>
               </a>
             </div>
-             <p class="text-contents">Lukisan indah yang bertemakan alam.</p>
           </div>
 
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="gallery">
+            <div class="gallery-icon">
               <a href="">
-                <img src="lukisan2.jpg" alt="lukisan 2">
-                <p>Lukisan Gurun Pasir</p>
+                <img src="image/thumbnail/Danau toba di kala senja.jpg" alt="Danau Toba di kala senja">
+                <span>Danau Toba di kala senja</span>
               </a>
             </div>
-            <p class="text-contents">Lukisan indah yang bertemakan alam.</p>
           </div>
 
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="gallery">
+            <div class="gallery-icon">
               <a href="">
-                <img src="lukisan3.jpg" alt="lukisan 3">
-                <p>Lukisan Danau</p>
+                <img src="image/thumbnail/Sungai deli.jpg" alt="Sungai Deli">
+                <span>Sungai Deli</span>
               </a>
             </div>
-            <p class="text-contents">Lukisan indah yang bertemakan alam.</p>
           </div>
 
-          <div class="lesson">
-            <div class="lesson-icon">
+          <div class="gallery">
+            <div class="gallery-icon">
               <a href="">
-               <img src="lukisan4.jpg" alt="lukisan 4">
-               <p>Lukisan Hutan</p>
+               <img src="image/thumbnail/Ikan koi.jpg" alt="Ikan Koi">
+               <span>Ikan Koi</span>
               </a>
             </div>
-            <p class="text-contents">Lukisan indah yang bertemakan alam.</p>
           </div>
 
           <div class="clear"></div>
@@ -102,10 +106,10 @@
       </div>
     </div>
 
-    <div class="message-wrapper" id="kontak">
+    <div class="message-wrapper" id="contact">
       <div class="container">
         <div class="heading" >
-          <h1>Kontak</h1>
+          <h1>Contact</h1>
           <h2>Apakah anda tertarik untuk memesan hasil karya lukisan kami ?</h2>
           <h3>Yuk di order, pemesanan bisa melalui tombol-tombol dibawah</h3>
         </div>
