--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="gallerys">
           <div class="gallery">
             <div class="gallery-icon">
-              <a href="">
+              <a href="#">
                 <img src="image/thumbnail/Bukit gundaling.jpg" alt="Bukit Gundaling">
                 <span>Bukit Gundaling</span>
               </a>
@@ -76,7 +76,7 @@
 
           <div class="gallery">
             <div class="gallery-icon">
-              <a href="">
+              <a href="#">
                 <img src="image/thumbnail/Danau toba di kala senja.jpg" alt="Danau Toba di kala senja">
                 <span>Danau Toba di kala senja</span>
               </a>
@@ -85,7 +85,7 @@
 
           <div class="gallery">
             <div class="gallery-icon">
-              <a href="">
+              <a href="#">
                 <img src="image/thumbnail/Sungai deli.jpg" alt="Sungai Deli">
                 <span>Sungai Deli</span>
               </a>
@@ -94,7 +94,7 @@
 
           <div class="gallery">
             <div class="gallery-icon">
-              <a href="">
+              <a href="#">
                <img src="image/thumbnail/Ikan koi.jpg" alt="Ikan Koi">
                <span>Ikan Koi</span>
               </a>
