--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="gallery">
             <div class="gallery-icon">
               <a href="#">
-                <img src="image/thumbnail/Bukit gundaling.jpg" alt="Bukit Gundaling">
+                <img src="image/thumbnail/Bukit_gundaling.jpg" alt="Bukit Gundaling">
                 <span>Bukit Gundaling</span>
               </a>
             </div>
@@ -77,7 +77,7 @@
           <div class="gallery">
             <div class="gallery-icon">
               <a href="#">
-                <img src="image/thumbnail/Danau toba di kala senja.jpg" alt="Danau Toba di kala senja">
+                <img src="image/thumbnail/Danau_toba_di_kala_senja.jpg" alt="Danau Toba di kala senja">
                 <span>Danau Toba di kala senja</span>
               </a>
             </div>
@@ -86,7 +86,7 @@
           <div class="gallery">
             <div class="gallery-icon">
               <a href="#">
-                <img src="image/thumbnail/Sungai deli.jpg" alt="Sungai Deli">
+                <img src="image/thumbnail/Sungai_deli.jpg" alt="Sungai Deli">
                 <span>Sungai Deli</span>
               </a>
             </div>
@@ -95,7 +95,7 @@
           <div class="gallery">
             <div class="gallery-icon">
               <a href="#">
-               <img src="image/thumbnail/Ikan koi.jpg" alt="Ikan Koi">
+               <img src="image/thumbnail/Ikan_koi.jpg" alt="Ikan Koi">
                <span>Ikan Koi</span>
               </a>
             </div>
