--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">☰</a></li>
            <li class="icon2"><a href="#home">Home</a></li>
            <li class="icon2"><a href="#profile" >Profile</a></li>
-           <li class="icon2"><a href="#gallery" >Gallery</a></li>
+           <li class="icon2"><a href="#gallery" >Gallery Jaya</a></li>
            <li class="icon2"><a href="#contact" >Contact</a></li>
          </ul>
 
